<resources>
    <string name="app_name">LinkUpSDKDemo</string>
    <string name="online_device_list">Online device list</string>
    <string name="selected_device">Selected devices:</string>
    <string name="record_device">Record device:</string>
    <string name="play_device">Play device:</string>
    <string name="selected_file">Selected files:</string>
    <string name="select_file">Select file</string>
    <string name="select_target_file">Select target file</string>
    <string name="customized_record_ui">CustomizedRecordUI</string>
    <string name="customized_play_ui">CustomizedPlayUI</string>
    <string name="foreground_camera">Foreground Camera</string>
    <string name="input_target_file_title">Enter a path with file name</string>
    <string name="input_exchange_content">Enter exchange content:</string>
    <string name="input_print_content">Enter print content:</string>
    <string name="sure">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Printer_list">Printer list:</string>
    <string name="Scanner_list">Scanner list:</string>
    <string name="Component_list">Printer/Scanner list:</string>
    <string name="File_type">File type:</string>
    <string name="selected_target_file">Selected target files:</string>
    <string name="uncheck">Uncheck</string>
</resources>
