<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp_28" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:background="@color/color_39C2B7"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_5"
                    android:text="@string/online_device_list"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dcdcdc" />

                <ListView
                    android:id="@+id/lv_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_select_file"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="bottom"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_select_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_file"
                    android:textAllCaps="false"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_16"/>

                <Button
                    android:layout_below="@+id/btn_select_file"
                    android:id="@+id/btn_select_target_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_target_file"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="#606060" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_select_device"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_play_device"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_device"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_device"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_component_list"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_component"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Printer_list"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rg_component_devices"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" />

                    <Button
                        android:id="@+id/btn_uncheck"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/uncheck"
                        android:textSize="@dimen/sp_16"
                        android:textAllCaps="false"
                        android:background="#39C5BB"/>
                </LinearLayout>

<!--                <LinearLayout-->
<!--                    android:id="@+id/line_scanners_devices"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="@dimen/dp_50"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:visibility="gone">-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/Scanner_list"-->
<!--                        android:textSize="@dimen/sp_20"-->
<!--                        android:textStyle="bold" />-->

<!--                    <RadioGroup-->
<!--                        android:id="@+id/rg_scanners_devices"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:gravity="center_vertical"-->
<!--                        android:orientation="horizontal" />-->
<!--                </LinearLayout>-->

                <LinearLayout
                    android:id="@+id/select_file_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_file"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_file"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_10" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/select_target_file_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_target_file"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/target_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_file_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/File_type"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rg_file_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/right_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="#606060" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibtn_log_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@null"
                    android:src="@mipmap/delete" />

                <ScrollView
                    android:id="@+id/scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_log"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:clickable="false"
                            android:textSize="@dimen/sp_22" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>